@@ -51,6 +51,7 @@ data GitConfig = GitConfig
 	, annexSecureEraseCommand :: Maybe String
 	, annexGenMetaData :: Bool
 	, annexListen :: Maybe String
+	, annexStartupScan :: Bool
 	, coreSymlinks :: Bool
 	, gcryptId :: Maybe String
 	}
@@ -85,6 +86,7 @@ extractGitConfig r = GitConfig
 	, annexSecureEraseCommand = getmaybe (annex "secure-erase-command")
 	, annexGenMetaData = getbool (annex "genmetadata") False
 	, annexListen = getmaybe (annex "listen")
+	, annexStartupScan = getbool (annex "startupscan") True
 	, coreSymlinks = getbool "core.symlinks" True
 	, gcryptId = getmaybe "core.gcrypt-id"
 	}
