@@ -7,6 +7,8 @@ git-annex (5.20140228) UNRELEASED; urgency=medium
   * webapp: No longer supports a port specified after --listen, since
     it was buggy, and that use case is better supported by setting up HTTPS.
   * annex.listen can be configured, instead of using --listen
+  * annex.startupscan can be set to false to disable the assistant's startup
+    scan.
   * Probe for quvi version at run time.
   * webapp: Filter out from Switch Repository list any
     repositories listed in autostart file that don't have a
